tests/errors/semantic/blocking/UNRECOGNISED_FUNCTION_CALL.py
from numpy import zeros

a = zeros()
